Replace 'App 2' with 'FILE REG FF 100K'

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <script>
   const apps = [
     {name:"AOV HACK V1", desc:"BY PHONG LỎ", img:"https://sf-static.upanhlaylink.com/img/image_20251120048774b7d532a663552c5b0caa19d692.jpg", link:"https://link4m.com/KorQAP"},
-    {name:"App 2", desc:"Mô tả app 2", img:"https://sf-static.upanhlaylink.com/img/image_20251120048774b7d532a663552c5b0caa19d692.jpg", link:"https://link4m.com/app2"},
+    {name:"FILE REG FF 100K", desc:"SUPPORT: KHI BẠN ĐÃ CÓ APP FILZA, CÀI QUA FILZA", img:"https://sf-static.upanhlaylink.com/view/image_20251120c1af605f17aefa1b2adf07ba703ad9d5.jpg", link:"https://link4m.com/wRZBpcj2"},
     {name:"App 3", desc:"Mô tả app 3", img:"https://sf-static.upanhlaylink.com/img/image_20251120048774b7d532a663552c5b0caa19d692.jpg", link:"https://link4m.com/app3"},
     {name:"App 4", desc:"Mô tả app 4", img:"https://sf-static.upanhlaylink.com/img/image_20251120048774b7d532a663552c5b0caa19d692.jpg", link:"https://link4m.com/app4"},
     {name:"App 5", desc:"Mô tả app 5", img:"https://sf-static.upanhlaylink.com/img/image_20251120048774b7d532a663552c5b0caa19d692.jpg", link:"https://link4m.com/app5"},
